[tool.poetry]
name = "openbb-xiaoyuan"
version = "0.0.1"
description = ""
authors = ["openbb-xiaoyuan <openbb-xiaoyuan>"]
readme = "README.md"
packages = [{ include = "openbb_xiaoyuan" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb-core = { version = "^1.1.2" }

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
openbb_xiaoyuan = "openbb_xiaoyuan.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
openbb_xiaoyuan = "openbb_xiaoyuan.provider:provider"
