[tool.poetry]
name = "openbb-xiaoyuan"
version = "0.0.1"
description = ""
authors = ["openbb-xiaoyuan <openbb-xiaoyuan>"]
readme = "README.md"
packages = [{ include = "openbb_xiaoyuan" }]

[[tool.poetry.source]]
name = "jinniuai"
url = "https://pypi.jinniuai.com/simple/"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openbb-core = { version = ">=1.1.2" }
openbb = "^4.3.3"
openbb-cli = "^1.1.3"
jinniuai-data-store = { version = "0.1.10", source = "jinniuai" }
jinniuai_config = { version = "0.1.6", source = "jinniuai" }
dolphindb = "^3.0.1.1"
loguru = "^0.7.2"
ipython = '*'

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.0.0" }
pytest = "<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.plugins."openbb_core_extension"]
#equity = "openbb_xiaoyuan.router:equity_router"

[tool.poetry.plugins."openbb_provider_extension"]
xiaoyuan = "openbb_xiaoyuan:openbb_xiaoyuan_provider"